--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Bingung mau kemana? Eksplorin aja" />
-    <title>Aku cina kamu</title>
+    <title>Eksplorin - Temani Petualanganmu!</title>
 
     <!-- Bootstrap -->
     <link
